# vidscribe

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
agent-skill/: SKILL.md
vidscribe/: __init__.py  __main__.py  cli.py  download.py  mcp_server.py  upload.py
vidscribe/providers/: __init__.py  aliyun.py  base.py  deepgram.py  local.py  openai_whisper.py  volcengine.py
