[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidscribe"
version = "0.1.0"
description = "MCP Server, Agent Skill & CLI — transcribe any video URL to text. Supports Bilibili, YouTube, TikTok/Douyin, Twitter/X, and 1000+ sites."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "XFWang522"},
]
keywords = ["mcp", "mcp-server", "agent-skill", "cursor", "windsurf", "codex", "transcription", "speech-to-text", "video", "subtitle", "bilibili", "youtube", "asr", "whisper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "yt-dlp",
    "requests",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
openai = ["openai>=1.0"]
deepgram = ["deepgram-sdk>=3.0"]
aliyun = ["dashscope>=1.0"]
local = ["faster-whisper>=1.0"]
all = ["mcp>=1.0", "openai>=1.0", "deepgram-sdk>=3.0", "dashscope>=1.0", "faster-whisper>=1.0"]

[project.urls]
Homepage = "https://github.com/XFWang522/vidscribe"
Repository = "https://github.com/XFWang522/vidscribe"
Issues = "https://github.com/XFWang522/vidscribe/issues"

[project.scripts]
vidscribe = "vidscribe.cli:main"
vidscribe-mcp = "vidscribe.mcp_server:main"

[tool.setuptools.packages.find]
include = ["vidscribe*"]
